@@ -113,5 +113,12 @@ public class UIConfigDefaultsSWT
 		def.addParameter("suppress_file_download_dialog", false);
 		def.addParameter("auto_remove_inactive_items", false);
 		def.addParameter("show_torrents_menu", true);
+		
+		def.addParameter("swt.forceMozilla",false);
+		def.addParameter("swt.xulRunner.path","");
+		
+		String xulPath = COConfigurationManager.getStringParameter("swt.xulRunner.path");
+		if(!xulPath.equals(""))
+			System.setProperty("org.eclipse.swt.browser.XULRunnerPath", xulPath);
 	}
 }
