@@ -179,7 +179,7 @@ public class WelcomeWindow {
 
 		if (sWhatsNew.indexOf("<html") >= 0 || sWhatsNew.indexOf("<HTML") >= 0) {
 			try {
-				Browser browser = new Browser(cWhatsNew, SWT.NONE);
+				Browser browser = new Browser(cWhatsNew, Utils.getInitialBrowserStyle(SWT.NONE));
 				browser.setText(sWhatsNew);
 			} catch (Throwable t) {
 				try {
